# agentic-reviewer-light-demo

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.py  setup_ollama_path.ps1
.github/workflows/: ci.yml
configs/: config.yaml  labels.yaml
core/: __init__.py  config_loader.py  logging_config.py  observability.py  report_generator.py  review_engine.py  synthetic_generator.py
outputs/: .gitkeep
tests/: __init__.py  conftest.py  test_integration.py  test_report_generator.py  test_review_engine.py  test_run_demo.py  test_synthetic_generator.py
